--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "swr": "^1.3.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
     "prettier": "^2.7.1"
   },
   "eslintConfig": {
