--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
+    "@types/react-autosuggest": "^10.1.5",
     "@types/react-dom": "^17.0.13",
     "react": "^17.0.2",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
