--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   },
   "devDependencies": {
     "@testing-library/react": "12.1.4",
+    "@types/jest": "^29.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
+    "jest": "^29.0.3",
     "prettier": "^2.7.1"
   },
   "eslintConfig": {
