--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --all",
+    "test": "react-scripts test --watchAll",
     "eject": "react-scripts eject"
   },
   "dependencies": {
