--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react": "^17.0.2",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
@@ -34,6 +36,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
+    "@types/styled-components": "^5.1.26",
     "jest": "^29.0.3",
     "prettier": "^2.7.1"
   },
