--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-autosuggest": "^10.1.0",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
+    "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
@@ -33,6 +34,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.0.0",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
