--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "^17.0.39",
     "@types/react-autosuggest": "^10.1.5",
     "@types/react-dom": "^17.0.13",
+    "firebase": "^9.10.0",
     "react": "^17.0.2",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-loading": "^2.0.3",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
@@ -33,6 +35,7 @@
     "@testing-library/react": "12.1.4",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^29.0.0",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
