--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "recoil": "^0.7.5",
+    "recoil-persist": "^4.2.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.5",
