--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-autosuggest": "^10.1.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.35.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
