--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.0",
     "recoil": "^0.7.5",
     "recoil-persist": "^4.2.0",
+    "recoilize": "^3.1.6",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.5",
@@ -56,6 +57,7 @@
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/recoil": "^0.0.9",
+    "@types/recoilize": "^0.8.0",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/styled-components": "^5.1.26",
