--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.5",
+    "styled-reset": "^4.4.2",
     "swr": "^1.3.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
