--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.35.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.15.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
