--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.7.5",
     "recoil-persist": "^4.2.0",
     "recoilize": "^3.1.6",
@@ -58,6 +59,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@types/recoil": "^0.0.9",
     "@types/recoilize": "^0.8.0",
     "@types/redux": "^3.6.0",
