--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "12.1.4",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/firebase": "^3.2.1",
-    "@types/jest": "^29.0.0",
+    "@types/jest": "^29.1.2",
     "@types/react-autosuggest": "^10.1.5",
     "@types/react-dom": "^18.0.6",
     "@types/react-modal": "^3.13.1",
@@ -65,6 +66,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/styled-components": "^5.1.26",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "babel-plugin-named-exports-order": "^0.0.2",
@@ -74,8 +76,10 @@
     "eslint-plugin-storybook": "^0.6.4",
     "husky": "^8.0.1",
     "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.2.0",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
+    "ts-jest": "^29.0.3",
     "webpack": "^5.74.0"
   },
   "eslintConfig": {
